src/styles/globals/tokens/_content.tokens.css
:root,
::before,
::after {
    --content-fullwidth: 100%;
    --content-width-with-padding: calc(100% - calc(var(--content-padding-to-border) * 2));
    --content-max-width: 960px;
    --content-medium-max-width: 1200px;
    --content-wide-max-width: 1440px;
    --content-padding-to-border: var(--spacing-normal);
    --content-spacing-between-elements: var(--spacing-xl);
    --content-spacing-between-columns: var(--spacing-l);
    --topbar-height-small: 54px;
    --topbar-height-medium: 64px;
    --topbar-height-large: 80px;
    --topbar-height: var(--topbar-height-medium);
    --service-nav-height: var(--spacing-xl);
}

@media screen and (min-width: 840px) {
    :root,
    ::before,
    ::after {
        --content-spacing-between-columns: var(--spacing-xl);
        --topbar-height-small: 64px;
        --topbar-height-medium: 80px;
        --topbar-height-large: 100px;
    }
}

